# PROYECTO-INTEGRADOR

./: .gitignore  README.md  mdi_homicidiosintencionalse_pm_2026_enero_mayo.xlsx  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: __init__.py  app.py
dashboard/components/: __init__.py  hero.py  kpi.py
dashboard/data/: __init__.py  cargar_datos.py
dashboard/tabs/: __init__.py  alertas.py  caracterizacion.py  datos.py  ejecutivo.py  geografico.py  metodologia.py  predictivo.py  riesgo.py  simulador.py  temporal.py
dashboard/theme/: __init__.py  colores.py  css.py  plotly_template.py
data/processed/: dataset_modelo_diario.csv  dim_delito.csv  dim_geografia.csv  dim_tiempo.csv  dim_victima.csv  fact_homicidios.csv  poblacion_ecuador.json  reporte_calidad.json
data/raw/: homicidios_intencionales_2026_enero_mayo.csv
docs/: EXPLICACION_PROYECTO.md  JUSTIFICACION_MODELO_PREDICTIVO.md
informe/: DEFENSA_SAFEANALYTICS_EC.pptx  EXPLICACION_PROYECTO.md  EXPOSICION_APP.md  FASE_1_DEFINICION_NEGOCIO.docx  FASE_1_DEFINICION_NEGOCIO.md  GUIA_VISTAS_DASHBOARD.docx  GUION_PITCH.md  INFORME_TECNICO_SAFEANALYTICS_EC.docx  JUSTIFICACION_MODELO_PREDICTIVO.md  ~$SE_1_DEFINICION_NEGOCIO.docx
models/: modelo_incidencia_diaria.pkl
powerbi/: GUIA_POWER_BI.md  PASO_A_PASO_POWER_BI.md  SafeAnalytics_EC.pbix  tema_safeanalytics.json
reports/: correlacion_provincias.csv  eda_resultados.json  indicadores_provincia.csv  modelo_resultados.json  predicciones_prueba.csv  recomendaciones_estrategicas.csv  recomendaciones_resumen.json  riesgo_territorial.csv
(+7 files in other folders)
