[project]
name = "safeanalytics-ec"
version = "0.1.0"
description = "Analitica de negocios para monitoreo estrategico de homicidios intencionales en Ecuador"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "streamlit>=1.40",
  "plotly>=5.24",
  "openpyxl>=3.1",
  "requests>=2.31",
  "scikit-learn>=1.4",
]

[tool.ruff]
line-length = 100
